--- a/style.css
+++ b/style.css
@@ -241,3 +241,33 @@ div.Calculator > #result{
 }
 }
 
+@media screen and (max-height: 800px){
+    div.Calculator{
+    position: absolute;
+    background-color: rgb(20, 19, 19);
+    border-radius: 7px;
+    width: 65%;
+    height: 50%;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 10px black;
+      
+}
+div.Calculator > #ac{
+    position: relative;
+    width: 70px;
+    top: -32px;
+    left: 215px;
+    background-color: rgb(124, 40, 40);
+    
+}
+div.Calculator > #result{
+    position:absolute;
+    height: 100px;
+    left: 220px;
+    top:268px;
+    background-color: rgb(114, 46, 177);
+}
+}
+
