--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ div.Calculator{
     background-color: rgb(20, 19, 19);
     border-radius: 7px;
     width: 20%;
-    height: 50%;
+    height: 52%;
     top: 50%;
     left:50%;
     transform: translate(-50%, -50%);
@@ -23,60 +23,64 @@ div.Calculator{
 }
 
 .buttons{
-    position: relative;
+    position:relative;
     background-color: black;
     color: white;
     border: 1px black;
     font-size: 25px;
     text-align: center;
-    width: 60px;
-    height: 50px;
+    width: 20%;
+    height: 13%;
     cursor: pointer;
     align-items: center;
-    top: 20px;
-    left: 27px;
+    top: 0%;
+    left: 7.6%;
 }
 
 div.Calculator > #zero{
     position: relative;
-    width: 130px;
-    top:12px;
+    width: 42%;
+    top:0%;
 }
 
 div.Calculator > #point{
     position:relative;
-    left: 12px;
-    width: 70px;
-    top:12px;
+    display: flex;
+    left: 48.5%;
+    width: 21.8%;
+    top:-13%;
 }
 
 div.Calculator > #result{
     position:absolute;
-    height: 100px;
-    left: 220px;
-    top:270px;
+    display: flex;
+    height: 26%;
+    left: 72%;
+    top:68.5%;
     background-color: rgb(114, 46, 177);
     
 }
 
 div.Calculator > #history{
     position: relative;
+    display:flex;
     background-color: transparent;
-    width: 40px;
-    height: 40px;
-    left: -173px;
-    top:-225px;
+    width: 12%;
+    height: 10%;
+    left: 12%;
+    top:-89%;
     filter: invert(100%)
     
 }
 
 div.Calculator > #scientific{
     position: relative;
+    display: flex;
     background-color: transparent;
-    width: 32px;
-    height: 32px;
-    left: -150px;
-    top:-229px;
+    width: 10%;
+    height: 8%;
+    left: 34%;
+    top: -98%;
     filter: invert(100%)
 
 }
@@ -99,145 +103,37 @@ div.Calculator > #scientific{
 }
 
 div.Calculator > #ac{
+    display: flex;
     position: relative;
-    width: 70px;
-    top: -32px;
-    left: 232px;
+    width: 22%;
+    height: 12%;
+    top: -7.8%;
+    left: 74%;
     background-color: rgb(124, 40, 40);
     
 }
+
 /*responsive formatation layout for mobile (768)*/
 @media screen and (max-width: 768px){
     div.Calculator{
-    position: absolute;
-    background-color: rgb(20, 19, 19);
-    border-radius: 7px;
-    width: 65%;
-    height: 65%;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 10px black;
+        width:fit-content;
+        height: 55%;
       
 }
 
 div.Calculator > #ac{
-    position: relative;
-    width: 70px;
-    top: -32px;
-    left: 240px;
-    background-color: rgb(124, 40, 40);
+    left: 74.5%;
     
 }
 
 div.Calculator > #result{
-    position:absolute;
-    height: 100px;
-    left: 220px;
-    top:268px;
-    background-color: rgb(114, 46, 177);
-    
+    left: 72.8%;
 }
 
-}
-
-/*responsive formatation layout for mid split(~775)*/
-@media screen and (max-width: 775px){
-    div.Calculator{
-    position: absolute;
-    background-color: rgb(20, 19, 19);
-    border-radius: 7px;
-    width: 42%;
-    height: 50%;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 10px black;
-      
-}
-
-div.Calculator > #ac{
-    position: relative;
-    width: 70px;
-    top: -32px;
-    left: 240px;
-    background-color: rgb(124, 40, 40);
-    
-}
-
-div.Calculator > #result{
-    position:absolute;
-    height: 100px;
-    left: 220px;
-    top:268px;
-    background-color: rgb(114, 46, 177);
-    
-}
+div.Calculator > #point{
+    left: 49.5%;
 
 }
-
-/*responsive formatation layout for small (800 )*/
-@media screen and (max-width: 800px){
-    div.Calculator{
-    position: absolute;
-    background-color: rgb(20, 19, 19);
-    border-radius: 7px;
-    width: 40%;
-    height: 70%;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 10px black;
-      
 }
 
-div.Calculator > #ac{
-    position: relative;
-    width: 70px;
-    top: -32px;
-    left: 230px;
-    background-color: rgb(124, 40, 40);
-    
-}
-
-div.Calculator > #result{
-    position:absolute;
-    height: 100px;
-    left: 220px;
-    top:268px;
-    background-color: rgb(114, 46, 177);
-    
-}
-
-}
-
-@media screen and (max-width: 500px){
-    div.Calculator{
-    position: absolute;
-    background-color: rgb(20, 19, 19);
-    border-radius: 7px;
-    width: 65%;
-    height: 78%;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 10px black;
-      
-}
-div.Calculator > #ac{
-    position: relative;
-    width: 70px;
-    top: -32px;
-    left: 215px;
-    background-color: rgb(124, 40, 40);
-    
-}
-div.Calculator > #result{
-    position:absolute;
-    height: 100px;
-    left: 220px;
-    top:268px;
-    background-color: rgb(114, 46, 177);
-}
-}
 
