--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ div.Calculator > #point{
 
 div.Calculator > #result{
     position:absolute;
+    text-align: center;
     display: flex;
     height: 26%;
     left: 72%;
@@ -105,6 +106,7 @@ div.Calculator > #scientific{
 div.Calculator > #ac{
     display: flex;
     position: relative;
+    text-align: center;
     width: 22%;
     height: 12%;
     top: -7.8%;
