--- a/style.css
+++ b/style.css
@@ -27,20 +27,20 @@ div.Calculator{
     background-color: black;
     color: white;
     border: 1px black;
-    font-size: 25px;
+    font-size: 150%;
     text-align: center;
     width: 20%;
     height: 13%;
     cursor: pointer;
     align-items: center;
-    top: 0%;
+    top: 5%;
     left: 7.6%;
 }
 
 div.Calculator > #zero{
     position: relative;
     width: 42%;
-    top:0%;
+    top:5%;
 }
 
 div.Calculator > #point{
@@ -48,12 +48,11 @@ div.Calculator > #point{
     display: flex;
     left: 48.5%;
     width: 21.8%;
-    top:-13%;
+    top:-8%;
 }
 
 div.Calculator > #result{
     position:absolute;
-    display: flex;
     height: 26%;
     left: 72%;
     top:68.5%;
@@ -68,7 +67,7 @@ div.Calculator > #history{
     width: 12%;
     height: 10%;
     left: 12%;
-    top:-89%;
+    top:-84%;
     filter: invert(100%)
     
 }
@@ -80,7 +79,7 @@ div.Calculator > #scientific{
     width: 10%;
     height: 8%;
     left: 34%;
-    top: -98%;
+    top: -93%;
     filter: invert(100%)
 
 }
@@ -103,7 +102,6 @@ div.Calculator > #scientific{
 }
 
 div.Calculator > #ac{
-    display: flex;
     position: relative;
     text-align: center;
     width: 22%;
